[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Area_Specific/Minigame/Fortune_Minigame.gd" type="Script" id=1]
[ext_resource path="res://UI/Star Deco.png" type="Texture" id=2]
[ext_resource path="res://Assets/Puzzle Pier/Fortune Screen.jpg" type="Texture" id=3]
[ext_resource path="res://Misc/Font/SaveStar.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/Transition Star.png" type="Texture" id=5]
[ext_resource path="res://Assets/Puzzle Pier/FortuneCard.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Puzzle Pier/Fortune Screen 2.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/General/All Items.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://Misc/Font/Greenscr.ttf"

[sub_resource type="DynamicFont" id=8]
size = 28
outline_size = 4
outline_color = Color( 0.43, 0.269753, 0.2064, 1 )
extra_spacing_space = -3
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=9]
antialiased = false
font_path = "res://Misc/Font/Greenscr.ttf"

[sub_resource type="DynamicFont" id=6]
size = 14
outline_size = 2
outline_color = Color( 0.42, 0.26348, 0.2016, 1 )
extra_spacing_space = -3
font_data = SubResource( 9 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionStar:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TransitionStar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TransitionStar:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionStar:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1.2, 1.2 ), Vector2( 1.6, 1.6 ), Vector2( 2, 2 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionStar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.7 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.301961 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TransitionStar:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, -20.0, -30.0, -40.0, -50.0, -60.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}

[node name="Fortune" type="Node2D"]
script = ExtResource( 1 )

[node name="Screen" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Screen2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="StarDeco3" type="Sprite" parent="Screen2"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( -120, 96 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="StarDeco4" type="Sprite" parent="Screen2"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 120, 96 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Title" type="Label" parent="."]
margin_left = -128.0
margin_top = -204.0
margin_right = 131.0
margin_bottom = -169.0
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Pick a Card!"
align = 1

[node name="Title2" type="Label" parent="."]
visible = false
margin_left = -163.5
margin_top = -154.0
margin_right = 166.5
margin_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = SubResource( 8 )
text = "Courageous Fortune"
align = 1

[node name="Fortune" type="Label" parent="."]
visible = false
margin_left = -199.0
margin_top = -91.0
margin_right = 199.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 6 )
text = "There are many choices that are burdening you right now. Think wisely and pick the option that will bring you the most peace"
align = 1
autowrap = true

[node name="Fortune_Bonus" type="Label" parent="."]
visible = false
margin_left = -199.0
margin_top = -7.0
margin_right = 199.0
margin_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "Attack +10% next 3 battles!"
align = 1
autowrap = true

[node name="Item" type="Sprite" parent="."]
visible = false
position = Vector2( 6, 98 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )
hframes = 3
vframes = 32
frame = 55

[node name="StarDeco" type="Sprite" parent="."]
visible = false
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( -161, -188 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="StarDeco2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 162, -188 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="Cards" type="Node2D" parent="."]

[node name="FortuneCard" parent="Cards" instance=ExtResource( 6 )]
position = Vector2( -196, 32 )

[node name="FortuneCard2" parent="Cards" instance=ExtResource( 6 )]
position = Vector2( 3, 32 )

[node name="FortuneCard3" parent="Cards" instance=ExtResource( 6 )]
position = Vector2( 203, 32 )

[node name="TransitionStar" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.898039, 0.486275, 0.980392, 1 )
position = Vector2( 9, 13 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.6
anims/RESET = SubResource( 3 )
anims/flash = SubResource( 5 )
anims/open = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -320.0
margin_top = -280.0
margin_right = 320.0
margin_bottom = 280.0
color = Color( 0, 0, 0, 1 )
